# FluidX3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: config.json
include/fx3d/: info.hpp  lbm.hpp  scenes.hpp  settings.hpp
include/utils/: coo_tensor_float.hpp  defines.hpp  graphics.hpp  kernel.hpp  opencl.hpp  shapes.hpp  units.hpp  utilities.hpp
src/: defines.hpp  fluidx.cpp  graphics.cpp  info.cpp  kernel.cpp  lbm.cpp  lbm.hpp  lodepng.cpp  main.cpp  setup.cpp  shapes.cpp
src/fx3d/: gsettings.cpp  scenes.cpp  settings.cpp
